start to use groundhog, avoid mosaic

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -15,7 +15,7 @@ author:
 
 affiliation:
   - id            : "1"
-    institution   : "TBA"
+    institution   : "School of Psychology, Nanjing Normal University"
   - id            : "2"
     institution   : "Leibniz Institute for Resilience Research, 55131 Mainz, Germany"
   - id            : "3"
@@ -31,11 +31,11 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. KP & JS supported this project.
 
 abstract: |
-  Morality is central to social life. To navigate in a complex social world, individual has to evaluate others' moral character and keep a positive moral self-view. Though moral character in person perception and moral self-enhancement had been extensively studied, the perceptual process of moral character is unkonwn. Using social associative learning paradigm (self-tagging paradigm), participant learned the concept of moral character and visual cues (shapes) and then perform a perceptual matching task. The results showed that when geometric shapes, without soical meaning, that associated with good moral character were prioritized. This patterns of results were robust when we change different semantic words or using behiavioral history as an proxy of mroal character. Also, this patterns were robust across different procedures. We then examined two competing explanation for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good moral character effect was strong when for the self condition but not for other condition. We further tested the good-self based social categorization by presenting the identity or moral character information as task-irrelevant stimuli, so that we can distinguish between the unique good-self hypothesis and a more general good-person based social categorization hypothesis. The evidence suggested that human are more likely has a good-person based categorization instead of a unique good-self. Finally, we explored whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain but also aesthetic domain, but not affective valence *per se*. Exploratory analyses on task-questionnaire relationship found that there are weak correlation between self-bad distance and behavioral pattern. These results suggest that there exist a social categorization in perceptual decision-making, which is based on personal traits (moral character) but not affective valence.
+  To navigate in a complex social world, individuals are constantly evaluating others' moral character. Also, they are managing a moral self-view that is aligned with their goals. Though moral character in person perception and moral self-enhancement had been extensively studied, the perceptual process of moral character was seldomly studied, we examined the influence of immediately acquired moral information on perceptual matching processing by using social associative learning paradigm (self-tagging paradigm). In a series of experiments, participants learned the concept of moral character and visual cues (shapes) and then perform a perceptual matching task. The results showed that when geometric shapes, intially without soical meaning, that associated with good moral character were prioritized. This patterns of results were robust when we change different semantic words or using behiavioral history as an proxy of mroal character. Also, this patterns were robust in both simutanouly presentation and sequential presentation. We then examined two competing explanation for this effect: value-based prioritization or social-categorization based prioritization. We manipulated the identity of different moral character explicitly and found that the good moral character effect was strong when for the self-referential conditions but not for other-referential condition. We further tested the good-self based social categorization by presenting the identity or moral character information as task-irrelevant stimuli, so that we can distinguish between the unique good-self hypothesis and a more general good-person based social categorization hypothesis. The evidence suggested that human are more likely has a good-person based categorization instead of a unique good-self. Finally, we explored whether the positivity effect only exist in moral domain and found that this effect was not limited to moral domain but also aesthetic domain, but not affective valence *per se*. Exploratory analyses on task-questionnaire relationship found that there are weak correlation between self-bad distance and behavioral pattern. These results suggest that there exist a social categorization in perceptual decision-making, which is based on personal traits (moral character) but not affective valence.
   
   <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "Perceptual decision-making, Self, positive bias, morality"
+keywords          : "Perceptual decision-making, Self positivity bias, morality"
 wordcount         : "X"
 
 bibliography      : 
@@ -82,23 +82,21 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. When experiencing these events, it always involves judging "right" or "wrong", "good" or "bad". By judging "right" or "wrong", people may implicitly infer "good" or "bad", i.e., moral character [@uhlmann_person-centered_2015]. Similarly, moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. 
+[Morality is the central of human social life]. People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. When experiencing these events, it always involves judging "good" or "bad". Judging "good" vs. "bad" also appeared implicitly in judging "right" or "wrong", i.e., moral character [@uhlmann_person-centered_2015]. Similarly, moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. 
 
-Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-views is as important as making judgment about others' moral character [@ellemers_psychology_2019]. Moral character is studied extensively both in in person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and moral self-view [@monin_dynamic_2009; @strohminger_true_2017; @klein_maybe_2016; @tappin_illusion_2017]. Recent theorists are trying to bring them together and emphasize a person-centered moral psychology[@uhlmann_person-centered_2015]. In this new perspective, role of perceiver's self-relevance in morality has also been studied [e.g., @waytz_whistleblowers_2013]. 
+Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-view is as important as making judgment about others' moral character [@ellemers_psychology_2019]. Moral character is studied extensively both in in person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and moral self-view [@monin_dynamic_2009; @strohminger_true_2017; @klein_maybe_2016; @tappin_illusion_2017]. Recent theorists are trying to bring them together and emphasize a person-centered moral psychology[@uhlmann_person-centered_2015]. In this new perspective, role of perceives' self-relevance in morality has also been studied [e.g., @waytz_whistleblowers_2013]. 
 
-To date, however, as @freeman_dynamic_2011 put it, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
+To date, however, as @freeman_dynamic_2011 put it in perceiving others, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
 
-To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether we can detect the influence of moral character information on perceptual decision-making in a reliable way, and (2) potential explanations for the effect. In the first four experiment, we found a robust effect of good-person prioritization in perceptual decision-making. The we explore the potential explanations and tested value-based prioritization versus self-relevance-based prioritization (social-categorization [@turner_self_1994; @turner_rediscovering_1987]). These results suggested that people may categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is the core of categorization.
+To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether moral character related information are processed differently in perceptual decision-making, and (2) potential explanations for the effect. In the first four experiments, we found a robust effect of good-person prioritization in the perceptual decision-making. Then, we explore the potential explanations and tested value-based prioritization versus self-relevance-based prioritization (social-categorization [@turner_self_1994; @turner_rediscovering_1987]). These results suggested that people categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is always prioritized.
 
 ## Perceptual process of moral character
 
 [exp1a, b, c, and exp2]
 
-[using associative learning task to study the moral character's influence on perception] Though it is theoretically possible that moral character related information may be prioritized in perceptual process, no empirical studies had directly explored this possibility. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. 
+[using associative learning task to study the moral character's influence on perception] Though the importance of moral character naturally leads us to conclude that moral character related information may be prioritized in perceptual process, only a few studies tried to touch this question and the results are debated. The first attempt was from affective scientists, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. In the behavioral descriptions, they included some behaviors that are moral transgressions. They assumed that by learning the behavioral description of a person (represented by a face), participants can infer the moral character of these faces, and the associations could then bias the perceptual processing of the faces (but see @stein_no_2017). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010, @jones_which_2020] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design. Another relevant study were from [@gantman_moral_2014], where moral laden words were used to test the attention to moral and amoral words. They found that moral related information can be perceived faster [but see, @firestone_enhanced_2015]. 
 
-One difficulty of studying the perceptual process of moral character is that moral character is an inferred trait instead of observable feature. usually, one needs necessary more sensory input, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants can acquire the moral related information about faces, and the associations could then bias the perceptual processing of the faces (but see @stein_no_2017). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
-
-An alternative is to use abstract semantic concepts. Abstract concepts of moral character are used to describe and represent moral characters. These abstract concepts may be part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see, @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races and stereotype [see @xiao_perceiving_2016], moral character related concept might change the perceptual processes.
+To better control the potentially variation induced by the stimuli, we adapted an associative learning task where the abstract semantic meaning were directly associated with previous neutral geometric shapes, then participants finish a perceptual matching task. We assumed that abstract concepts of moral character can describe and represent moral characters because they are part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If an association between a shape and a concept is formed, then, the activation of that concept (e.g., good person) should be able to has impact on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see, @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races and stereotype [see @xiao_perceiving_2016], moral character related concept might change the perceptual processes.
 
 To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant meaning is describing the moral character of a person. Participants first learn the associations between shapes and words, e.g., triangle is a good-person. After building direct association between the abstract moral characters and visual cues, participants then perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018; @enock_overlap_2020]. By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
