--- a/endnote.bib
+++ b/endnote.bib
@@ -1279,3 +1279,16 @@ Publisher: American Psychological Association},
 	langid = {english},
 	file = {Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:/home/hcp4715/Zotero/storage/W45PPDRD/Dang et al. - 2020 - Why Are Self-Report and Behavioral Measures Weakly.pdf:application/pdf}
 }
+
+
+@article{jones_which_2020,
+	title = {To Which World Regions Does the Valence-Dominance Model of Social Perception Apply?},
+	url = {https://osf.io/n26dy},
+	doi = {10.31234/osf.io/n26dy},
+	abstract = {Over the last ten years, Oosterhof and Todorov’s valence-dominance model has emerged as the most prominent account of how people evaluate faces on social dimensions. In this model, two dimensions (valence and dominance) underpin social judgments of faces. Because this model has primarily been developed and tested in Western regions, it is unclear whether these findings apply to other regions. We addressed this question by replicating Oosterhof and Todorov’s methodology across 11 world regions, 41 countries, and 11,570 participants. When we used Oosterhof and Todorov’s original analysis strategy, the valence-dominance model generalized across regions. When we used an alternative methodology to allow for correlated dimensions we observed much less generalization. Collectively, these results suggest that, while the valence-dominance model generalizes very well across regions when dimensions are forced to be orthogonal, regional differences are revealed when we use different extraction methods, correlate and rotate the dimension reduction solution.},
+	journaltitle = {Nature Human Behaviour},
+	author = {Jones, Benedict C and {DeBruine}, Lisa Marie and Flake, Jessica Kay and Liuzza, Marco Tullio and Antfolk, Jan and Arinze, Nwadiogo Chisom and Ndukaihe, Izuchukwu Lawrence Gabriel and Bloxsom, Nicholas and Lewis, Savannah and Foroni, Francesco and Willis, Megan and Cubillas, Carmelo P. and Vadillo, Miguel A. and gilead, michael and Simchon, Almog and Saribay, Selahattin Adil and Owsley, Nicholas Calbraith and Calvillo, Dustin P and Włodarczyk, Anna and Qi, Yue and Ariyabuddhiphongs, Kris and Jarukasemthawee, Somboon and Manley, Harry and Suavansri, Panita and Taephant, Nattasuda and Stolier, Ryan Mayer and Evans, Thomas Rhys and Bonick, Judson and Lindemans, Jan Willem and Ashworth, Logan Fox and Chevallier, Coralie and Kapucu, Aycan and Karaaslan, Aslan and Leongómez, Juan David and Sánchez, Oscar R. and Valderrama Escallón, Eugenio and Vásquez-Amézquita, Milena and Aczel, Balazs and Hajdu, Nandor and Szecsi, Peter and Andreychik, Michael and Musser, Erica D. and Batres, Carlota and Hu, Chuan-Peng and Liu, Qing-Lan and Legate, Nicole and Vaughn, Leigh Ann and Barzykowski, Krystian and Golik, Karolina and Schmid, Irina and Stieger, Stefan and Artner, Richard and Mues, Chiel Kris Karel and vanpaemel, wolf and Jiang, Zhongqing and Wu, Qi and Marcu, Gabriela and Stephen, Ian and Lu, Jackson G. and Philipp, Michael Carl and Arnal, Jack Dennis and Hehman, Eric and Xie, Sally Y and Chopik, William J. and Seehuus, Martin and Azouaghe, Soufian and Belhaj, Abdelkarim and Elouafa, Jamal and Wilson, John Paul and Kruse, Elliott Tyler and Papadatou-Pastou, Marietta and Barba-Sanchez, Alan and De La Rosa Gomez, Anabel and González-Santoyo, Isaac and Hsu, Tsuyueh and Kung, Chun-Chia and Hsiao-Hsin, Wang and Freeman, Jonathan B. and Oh, {DongWon} and Schei, Vidar and Sverdrup, Therese E and Levitan, Carmel and Cook, Corey L. and Chandel, Priyanka and Kujur, Pratibha and Parganiha, Arti and Parveen, Noorshama and Pati, Atanu Kumar and Pradhan, Sraddha and Singh, Margaret Messiah and Pande, Babita and Bavolar, Jozef and Kačmár, Pavol and Zakharov, Ilya and Solas, Sara Álvarez and Baskin, Ernest and Thirkettle, Martin and Schmidt, Kathleen and Christopherson, Cody D and Suchow, Jordan W and Olofsson, Jonas and Lee, Ai-Suan and Beaudry, Jennifer L and Gogan, Taylor Diarmuid and Oldmeadow, Julian and Dixson, Barnaby and Stevens, Laura and Ribeiro, Gianni and Brandt, Mark John and Hoyer, Karlijn and Jaeger, Bastian and Ren, Dongning and Sleegers, Willem and Wissink, Joeri and Kaminski, Gwenael and Floerke, Victoria A. and Urry, Heather L. and Chen, Sau-Chin and Pfuhl, Gerit and Vally, Zahir and Basnight-Brown, Dana and {IJzerman}, Hans and Sarda, Elisa and Badidi, Touhami and Van der Linden, Nicolas and Tan, Chrystalle B. Y. and Kovic, Vanja and Colloff, Melissa Fay and Flowe, Heather D and Burin, Di and Gardiner, Gwendolyn and Protzko, John and Schild, Christoph and Scigala, Karolina and Zettler, Ingo and O'Mara Kunz, Erin Marie and Storage, Daniel and Wagemans, Fieke Maria Antoinet and Saunders, Blair and Sirota, Miroslav and Sloane, Guyan and Lima, Tiago Jessé Souza and Uittenhove, Kim and Vergauwe, Evie and Jaworska, Katarzyna and Carvalho, Lilian and Ask, Karl and Van Zyl, Casper and Körner, Anita and Weissgerber, Sophia Christin and Boudesseul, Jordane and Ruiz-Dodobara, Fernando and Ritchie, Kay L. and Michalak, Nicholas Michael and Blake, Khandis and White, David and Gordon-Finlayson, Alasdair R and Anne, Michele and Janssen, Steve M. J. and Lee, Kean Mun and Nielsen, Tonje Kvande and Tamnes, Christian K. and Zickfeld, Janis and Dalla Rosa, Anna and Kocsor, Ferenc and Kozma, Luca and Putz, Adam and Tressoldi, Patrizio and Vianello, Michelangelo and Irrazabal, Natalia and Chatard, Armand and Lins, Samuel and Pinto, Isabel R. and Lutz, Johannes and Adamkovic, Matus and Babinčák, Peter and Baník, Gabriel and Ropovik, Ivan and Coetzee, Vinet and Peters, Kim Olivia and Steffens, Niklas K and Tan, Kokwei and Wei, Tan Kok and Thorstenson, Christopher A and Fernandez, Ana Maria and Hsu, Rafael M.C.S. and Valentova, Jaroslava Varella and Varella, Marco Antonio Correa and Corral-Frías, Nadia Saraí and Frias-Armenta, Martha and Hatami, Javad and Monajem, Arash and Sharifian, {MohammadHasan} and Frohlich, Brooke and Lin, Hause and Inzlicht, Michael and Lamm, Claus and Pronizius, Ekaterina and Voracek, Martin and Olsen, Jerome and Mac Giolla, Erik and Akgoz, Aysegul and Özdoğru, Asil Ali and Crawford, Matthew T and Bennett-Day, Brooke and Koehn, Monica A and Okan, Ceylan and Ansari, Daniel and Gill, Tripat and Miller, Jeremy K. and Dunham, Yarrow and Yang, Xin and Alper, Sinan and Alaei, Ravin and Lucia, Martha and Cai, Sun Jun and Danvers, Alexander Francois and Dranseika, Vilius and Gilboa-Schechtman, Eva and Hahn, Amanda C and Jang, Chaning and Marshall, Tara and {McCarthy}, Randy J. and Muñoz-Reyes, José Antonio and Muñoz-reyes, Ja and Neyroud, Lison and Polo, Pablo and Rule, Nicholas and Shiramizu, Victor Kenji Medeiros and Tiantian, Dong and Turiegano, Enrique and Yan, Wen-Jing and Balas, Benjamin and Ferreira, Paulo {RS} and Junger, Julia and Mburu, Georgina W and Sampaio, Waldir M. and Santos, Diana R and Gulgoz, Sami and Stern, Julia and Forscher, Patrick S. and Chartier, Christopher R. and Coles, Nicholas Alvaro},
+	urldate = {2020-07-11},
+	date = {2020},
+	file = {Jones et al. - 2018 - To Which World Regions Does the Valence-Dominance .pdf:/home/hcp4715/Zotero/storage/DSDMB5U7/Jones et al. - 2018 - To Which World Regions Does the Valence-Dominance .pdf:application/pdf}
+}
