remove mosaic's derivedFactor

--- a/exp3a.rmd
+++ b/exp3a.rmd
@@ -1,4 +1,4 @@
-## Experiment 3a
+RUE## Experiment 3a
 To examine the modulation effect of positive valence was an intrinsic, self-referential process, we designed study 3. In this study, moral valence was assigned to both self and a stranger. We hypothesized that the modulation effect of moral valence will be stronger for the self than for a stranger.
 
 ### Method
